# rl-tsc

./: .gitignore  README.md  evaluate.py  pyproject.toml  train.py  webgui.py
envs/: chem_potential_env.py  conductance_env.py  one_dim_env.py  zeeman_potential_env.py
logs/conductance/conductance_005noise_1/: events.out.tfevents.1737551328.homelab.1177585.0
logs/conductance/conductance_005noise_10/: events.out.tfevents.1737554636.homelab.1177737.8
logs/conductance/conductance_005noise_11/: events.out.tfevents.1737555056.homelab.1177737.9
logs/conductance/conductance_005noise_2/: events.out.tfevents.1737551409.homelab.1177737.0
logs/conductance/conductance_005noise_3/: events.out.tfevents.1737551845.homelab.1177737.1
logs/conductance/conductance_005noise_4/: events.out.tfevents.1737552231.homelab.1177737.2
logs/conductance/conductance_005noise_5/: events.out.tfevents.1737552636.homelab.1177737.3
logs/conductance/conductance_005noise_6/: events.out.tfevents.1737553034.homelab.1177737.4
logs/conductance/conductance_005noise_7/: events.out.tfevents.1737553457.homelab.1177737.5
logs/conductance/conductance_005noise_8/: events.out.tfevents.1737553843.homelab.1177737.6
plots/: plotting.ipynb  time evolution.ipynb  training plots.ipynb
plots/conductance/: conductance_obs.pkl
plots/moire/: moire_dos.pkl
plots/zeeman/: zeeman_dos.pkl
utils/: calc.py  calc_2nd_hopping.py  calc_conductance.py  chernGap.npy  chernGapLeft.npy  chernGapRight.npy  conductance_data.py  env_constructors.py  path_utils.py  rl.py  run.sh  test.py  triton.py  zeeman_data.py
(+79 files in other folders)
